# cabo

./: .gitignore  BUGS_FIXED_SUMMARY.txt  BUG_ANALYSIS_3.md  BUG_FIX_REPORT.md  BUG_FIX_REPORT_2.md  CLAUDE.md  DEBUGGING_GUIDE.md  FINAL_SUMMARY.md  POTENTIAL_ISSUES.md  README_BUG_FIX.md  SUMMARY.md  SUMMARY_v2.md  TEST_GUIDE.md  quick_start.sh  verify_fix.sh  verify_fix_v2.sh  verify_fix_v3.sh  服务端公网访问指南.md  服务端开启命令.md  游戏简介.md  游戏规则.md  背景更换说明.md  问题集合.md
.claude/: settings.local.json
.codex/: config.toml
Docs/: ARCHITECTURE.md  ART_REPLACEMENT_PLAN.md  BACKEND_RESUME_PROBLEM_LOG.md  BUG_LOG.md  Bug记录-2026-06-05-CLI客户端与服务端.md  CURRENT_TASK.md  GAME_SESSION.md  GDD.md  HIGH_IMPACT_BACKEND_PROBLEM_CASES.md  NETWORK_LAYER.md  NEXT_SESSION_PROMPT.md  PROJECT_OVERVIEW.md  README.md  RECONNECT_RECOVERY_NOTES.md  SESSION_SUMMARY.md  TENCENT_BACKEND_RESUME_DRAFT.md  TODO.md  UNITY_ANIMATION_NOTES.md  UNITY_CARD_VIEW_MIGRATION.md  UNITY_CLIENT_HANDOFF.md  UNITY_GAME_SCENE_TASK.md  Unity客户端协议参考.md  WEBSOCKET_CLOUDFLARE_RUNBOOK.md  clientAlog.md  修复完成-GameSceneController单例保护.md  修复完成-游戏开始界面和回合交互.md  修复步骤-删除重复GameSceneController.md  修复记录-TurnStartNotify竞态条件.md  修复记录-isCurrentPlayer.md  修复记录-优化GameStart按钮显示.md  修复记录-场景加载顺序修正.md  修复记录-抽牌后操作按钮问题.md  修复记录-重复GameSceneController导致crash.md  后续开发计划.md  客户端服务端交互诊断.md  当前玩家判定验证报告.md  房间到游戏启动流程.md  排查报告-潜在单例冲突分析.md  游戏开始界面显示说明.md  紧急修复-立即重新编译.md  (+5 more)
Docs/superpowers/: add-cute-fonts.md  build-font-fix.md  final-layout-2026-06-04.md  font-build-solution.md  gateway-lost-debug.md  handoff-2026-06-04.md  next-steps-2026-06-04.md  ui-fix-2026-06-04.md  ui-fix-summary.md  ui-toolkit-complete.md  urgent-fixes-2026-06-04.md
Docs/superpowers/plans/: 2026-06-03-game-table-ui.md  2026-06-03-protobuf-tcp-link.md  2026-06-05-cpp-cli-client.md  2026-06-06-unity-phase1.md  2026-06-08-websocket-cloudflare-plan.md  2026-06-09-chat-panel-ui-improvement.md  2026-06-10-game-animation-polish-plan.md
Docs/superpowers/specs/: 2026-06-03-game-table-ui-design.md  2026-06-03-protobuf-tcp-link-design.md  2026-06-06-unity-client-design.md  2026-06-08-websocket-cloudflare-design.md  C++ Cli客户端设计文档.md
MuduoBaseGameServer/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  CurrentThread.cc  CurrentThread.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  autobuild.sh  logger.cc  logger.h  noncopyable.h
MuduoBaseGameServer/cli_client/: CMakeLists.txt  README.md  TESTING.md  test_ui.cpp
MuduoBaseGameServer/cli_client/src/: ClientApp.cpp  ClientApp.h  GameState.cpp  GameState.h  NetworkClient.cpp  NetworkClient.h  UIRenderer.cpp  UIRenderer.h  main.cpp
MuduoBaseGameServer/example/: testserver.cc
MuduoBaseGameServer/mytest/: game_service_regression_test.cpp  room_service_regression_test.cpp  send_buffer_pool_test.cpp  websocket_codec_test.cpp
MuduoBaseGameServer/scripts/: run_with_tcmalloc.sh
MuduoBaseGameServer/src/common/: MessageCodec.cc  MessageCodec.h  MessageDispatcher.cc  MessageDispatcher.h  SendBufferPool.h  WebSocketCodec.cc  WebSocketCodec.h
MuduoBaseGameServer/src/game/: GameService.cc  GameService.h
MuduoBaseGameServer/src/room/: RoomService.cc  RoomService.h
MuduoBaseGameServer/src/server/: GameServer.cc
Proto/: README.md  common.proto  game.proto  messages.proto  room.proto  sync.proto
Tools/: build_character_variants.py  build_new_character_assets.py
unity dev/: CHINESE_FONT_FIX.md  CLAUDE.md
unity dev/Client/: FIXED.md  cleanup_ugui.py  replace_chinese.py
unity dev/Client/Assets/Editor/: CardViewBuilder.cs  ChineseTMPFontBuilder.cs  CompilationDiagnostic.cs  GameSceneBuilderUIToolkit.cs  GameSceneBuilder_Network.cs  MainMenuSceneBuilder.cs  PlayerAreaBuilder.cs  SceneBuilder.cs
unity dev/Client/Assets/Prefabs/Game/: CardView.prefab  PlayerArea.prefab
unity dev/Client/Assets/Scenes/: GameScene.unity  GameScene.unity.backup  MainMenuScene.unity  SampleScene.unity
unity dev/Client/Assets/Scripts/Game/: CaboGameManager.cs  Card.cs  Deck.cs  FontHelper.cs  GameManager.cs  GameSceneBootstrap.cs  GameUI.cs  Player.cs  PlayerController.cs
unity dev/Client/Assets/Scripts/Network/: MessageDispatcher.cs  RequestTracker.cs  TcpNetworkClient.cs
unity dev/Client/Assets/Scripts/UI/: CardDisplay.cs  MainMenuUI.cs  SimpleTest.cs  UIManager.cs
unity dev/Client/Assets/UI/: DefaultPanelSettings.asset  GameScene.uxml
unity dev/Client/Assets/UI/Styles/: ChineseFont.uss  GameScene.uss
unity dev/Client/Docs/: SceneResourcePlan_M1_M2.md
unity dev/Client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity dev/Client/TestTmpExe/Client_Data/: ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  resources.assets  sharedassets0.assets  sharedassets1.assets  sharedassets2.assets
unity dev/New Client_Unity_Base_Cli/Assets/Resources/: CaboPanelTextSettings.asset  GamePanelSettings.asset  GameScreen.uxml
unity dev/New Client_Unity_Base_Cli/Assets/Resources/Art/: CaboArtCatalog.asset  manifest.json
unity dev/New Client_Unity_Base_Cli/Assets/Scenes/: CaboGameScene.unity  GameScene.unity  PomeloSettlementPilot.unity  PomeloSkeletonPreview.unity
unity dev/New Client_Unity_Base_Cli/Assets/Scripts/: GameBootstrap.cs
unity dev/New Client_Unity_Base_Cli/Assets/UI/: GamePanelSettings.asset  GameScreen.uss  GameScreen.uxml
unity dev/New Client_Unity_Base_Cli/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity dev/skills/: README.md  unity-card-game-ui.md  unity-mcp-asset-workflow.md  unity-mcp-reference.md  unity-network-client.md  unity-proto-pipeline.md  unity-scene-generator.md  unity-state-sync-reconnect.md
unity dev/skills/unity-mcp-use/: SKILL.md
(+68 files in other folders)
